--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
     <title>Github Page</title>
 </head>
 <body>
     <h1>Hallo</h1>
+    <button onclick="importData()">select files...</button>
 </body>
 </html>
